<resources>
    <string name="app_name" translatable="false">Masquerade</string>
    <string name="login">LOGIN</string>
    <string name="username">USERNAME</string>
    <string name="login_logo">Login Logo</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_private_chat_room">Private Chat Room</string>
    <string name="menu_notes">My Notes</string>
    <string name="menu_public_chat_room_list">Public Chat Room</string>
    <string name="menu_settings">Settings</string>
    <string name="online_logo">ONLINE</string>
    <string name="roomlogo">Room Logo</string>
    <string name="type">Type...</string>
    <string name="create_room_fab">Create Room</string>
    <string name="create_public_room">Create Public Room</string>
    <string name="create">Create</string>
    <string name="room_name">Room Name</string>
    <string name="preview_image_without_chat">No Chat</string>
    <string name="password">Password</string>
    <string name="enter_private_room">Enter Private Room</string>
    <string name="settings_logo">Settings Logo</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="subscribed_chatroom">Subscribed Chatroom</string>
    <string name="messages_sent">Messages sent</string>
    <string name="log_out">Log out</string>
    <string name="version_settings" translatable="false">V beta.1</string>
    <string name="subscribe_button">Subscribe Button</string>
    <string name="unsubscribe_button">Unsubscribe Button</string>
    <string name="menu_subscribed_chat_room">Subscribed Chatroom</string>
    <string name="unsubscribe_dialog_title">Unsubscribe?</string>
    <string name="unsubscribe_dialog_message">\"Are you sure you want to unsubscribe this chatroom ?\"</string>
    <string name="unsubscribe_dialog_neutral">Cancel</string>
    <string name="unsubscribe_dialog_confirm">Confirm</string>
    <string name="send">Send Image</string>
</resources>