<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_public_chatroom"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/menu_public_chat_room_list" />
        <item
            android:id="@+id/nav_private_chatroom"
            android:icon="@drawable/ic_baseline_emoji_people_24"
            android:title="@string/menu_private_chat_room" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_baseline_sticky_note_2_24"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
    </group>
</menu>