<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_public_chatroom">

    <fragment
        android:id="@+id/nav_public_chatroom"
        android:name="id.ac.ui.cs.mobileprogramming.nathanael.masquerade.ui.publicChatroom.PublicChatroomFragment"
        android:label="@string/menu_public_chat_room_list"
        tools:layout="@layout/fragment_public_chatroom" />

    <fragment
        android:id="@+id/nav_private_chatroom"
        android:name="id.ac.ui.cs.mobileprogramming.nathanael.masquerade.ui.privateChatroom.PrivateChatroomBaseFragment"
        android:label="@string/menu_private_chat_room"
        tools:layout="@layout/fragment_private_chatroom" />

    <fragment
        android:id="@+id/nav_subscribed_chatroom"
        android:name="id.ac.ui.cs.mobileprogramming.nathanael.masquerade.ui.subscribedChatroom.SubscribedChatroomBaseFragment"
        android:label="@string/menu_subscribed_chat_room"
        tools:layout="@layout/fragment_private_chatroom" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="id.ac.ui.cs.mobileprogramming.nathanael.masquerade.ui.notes.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="id.ac.ui.cs.mobileprogramming.nathanael.masquerade.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>